--- a/style.css
+++ b/style.css
@@ -88,6 +88,13 @@
     font-weight: 400;
   }
 
+  .wrapper {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: clip;
+  }
+
   /*-------------Header-----------------*/
   .header {
     width: 100%;
@@ -176,11 +183,12 @@
     color: #FFFFFF;
   }
 
-  .button{
+  .button {
     display: flex;
     justify-content: center;
     margin-top: 70px;
   }
+
   .try__button {
     width: 236px;
     height: 52px;
@@ -199,4 +207,143 @@
     color: #FFFFFF;
   }
 
-   /*-------------------------Main--------------------*/
+  /*-------------------------Main--------------------*/
+  .features {
+    padding: 0;
+    margin-top: 120px;
+  }
+
+  .features__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    margin: 0 300px;
+    max-width: 100%;
+  }
+
+  .features__title {
+    text-align: center;
+  }
+
+  .feature__text {
+    font-family: 'Graphik';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 55px;
+    text-align: center;
+    letter-spacing: 0.2px;
+    color: #252B42;
+  }
+
+  .features__subtitle {
+    margin-top: 30px;
+  }
+
+  .feature__subtext {
+    font-family: 'Graphik';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 40px;
+    text-align: center;
+    letter-spacing: 0.2px;
+    color: #374754;
+  }
+
+  .feature__cards {
+    margin-top: 90px;
+    width: 100%;
+  }
+
+  .cards__container {
+    display: flex;
+    margin: 0 230px;
+  }
+
+  .feature__card {
+    flex: 33%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .card__image {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+
+
+  .card__text {
+    font-family: 'Graphik';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 28px;
+    text-align: center;
+    letter-spacing: 0.1px;
+    color: #252B42;
+    margin-bottom: 20px;
+  }
+
+  .card__subtext {
+    font-family: 'Graphik';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
+    letter-spacing: 0.2px;
+    color: #374754;
+  }
+
+  .video__section {
+    display: flex;
+    justify-content: center;
+    margin-top: 132px;
+  }
+
+  .video__section {
+    position: relative;
+  }
+
+  .play-icon {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+  }
+
+  .triangle {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 0;
+    height: 0;
+    border-top: 25px solid transparent;
+    border-bottom: 25px solid transparent;
+    border-left: 45px solid blue;
+    z-index: 100;
+  }
+
+  .bar {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 160px;
+    height: 160px;
+    background: #2091F9;
+    border-radius: 50%;
+  }
+
+  .play-icon .triangle {
+    border-left-color: white;
+  }
